import { 
    PaymentGateway,
    PaymentMethods,
    IItemPedido as ICheckoutItemPedido,
    IPedido as ICheckoutPedido,
    IPedidoTotal as ICheckoutPedidoTotal 
} from "../../../../../protobuf/gen/checkout/def/checkout";

export {
    PaymentGateway,
    PaymentMethods,
    ICheckoutItemPedido,
    ICheckoutPedido,
    ICheckoutPedidoTotal  
};